<resources>
    <string name="app_name">BookRead</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BookRead v. 1.0</string>
    <string name="nav_header_subtitle">orlinskas.development@gmai.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_add_book">Добавить книгу</string>
    <string name="nav_library">Библиотека</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_help">Помощь</string>
    <string name="communicate">Communicate</string>
    <string name="nav_share">Поделиться</string>
    <string name="nav_send_author">Связь с разработчиком</string>
    <string name="book_image">обложка книги</string>
    <string name="activity_title_search_book">Search Book</string>
    <string name="help1">1. В разделе \"Добавить книгу\", укажите путь к файлу на вашем устройстве.</string>
    <string name="help2">2. Вы можете выполнить поиск, в указанной директории, нажав на значок увеличительного стекла.</string>
    <string-array name="fontList">
        <item>DEFAULT</item>
        <item>DEFAULT_BOLD</item>
        <item>SERIF</item>
        <item>SANS_SERIF</item>
        <item>MONOSPACE</item>
    </string-array>
    <string name="eag">привет мой дорогой друг, я хочу познакомить тебя с моим хорошим спутником. Он часто выручал меня и наверное сейчас не исключение. Его зовут Костыль. Прямо сейчас ты видишь его. Данное приложение делалось в режиме обучения, это собственный проэкт и я вложил в него душу.
        Я бы хотел вложить и хорошие технические решения, но к сожалению на момент написания этого кода, я ими не обладал. Суть в следующем данный "костыль", это текст страницы, которую ты сейчас переворачиваешь, он задействован в анимации перелистывания, я хотел достатать текст настоящей страницы, но это долго дорогой друг, и вот - Костыль.

        А еще я знаю очень смешной комментарий под песней соад токсисити, мне нравится именно первый, да и песня хорошая, как раз под нее я придумал этот текст и само решение. А вообще спасибо тебе, пиши мне в разделе авторы, познакомимся, я вот качаюсь, расскажу как сделать битку 42 см. Спасибо тебе еще раз, удачи и пока! Короче оказалось, что нужно написать больше текста, в общем…Liv av kvar ein død, død av kvart eit liv. Liv av kvar ein død, død av kvart eit liv. 2. Вы можете выполнить поиск, в указанной директории, нажав на значок увеличительного стекла. orlinskas.development@gmai.com — Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты!
        — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше!


        Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…
        — Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок… </string>
    <string name="franceText">— Доктор, я не могу больше! Куда бы я ни посмотрел, о чём бы ни подумал, мне везде мерещится одно — шрифты, шрифты, шрифты! — Да не переживайте вы так. Сядьте, успокойтесь, выпейте чаю, съешьте ещё этих мягких французских булок…</string>
</resources>
